collapsed about to home page, header fixed instead of sticky

--- a/css/main.css
+++ b/css/main.css
@@ -171,17 +171,17 @@ video{
 
 .hero{
     display: flex;
-    min-height: calc(100vh - 4rem);
+    padding-bottom: 4rem;
+    min-height: 100vh;
     background-size: cover;
     background-position: center;
-    margin-bottom: 2rem;
 }
 
 .hero-titles{
     position: absolute;
-    width: calc(100% - 4rem) !important;
+    width: calc(100% - 10rem) !important;
     left: 6rem;
-    top: 100vh;
+    top: 100%;
     transform: translateY(calc(-100% - 4rem));
 }
 
@@ -190,18 +190,25 @@ video{
     width: 100%;
 }
 
+@media screen and (max-width: 1200px) {
+    .item img{
+        flex: 0 0 50%;
+    }
+}
+
 @media screen and (max-width: 992px) {
     .hero-titles{ 
         left: 4rem;
-    }
-    .item img{
-        flex: 0 0 50%;
     }
 }
 
 @media screen and (max-width: 768px) {
     .hero-titles{ 
         left: 2rem;
+        width: calc(100% - 4rem) !important;
+    }
+    #bio .hero-titles{
+        transform: translateY(calc(-100% - 2rem));
     }
     .item a{
         flex-direction: column;
@@ -224,6 +231,9 @@ video{
     .hero-titles{ 
         width: calc(100% - 0.5rem) !important;
         left: 0.5rem;
+    }
+    #bio .hero-titles{
+        transform: translateY(-100%);
     }
     .item img, .item-desc{
         width: 100% !important;
